EA: fixed truncate width

--- a/src/components/v2/appDetails/k8Resource/k8resources.css
+++ b/src/components/v2/appDetails/k8Resource/k8resources.css
@@ -1,5 +1,5 @@
 .k8-resources-node-tree{
-    width: 240px;
+    width: 270px;
     min-height: 532px;
     overflow-y: auto;
 }
